--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,44 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    app:cardElevation="@dimen/cardview_default_elevation"
+    app:cardCornerRadius="10dp"
+    android:outlineAmbientShadowColor="@color/cardview_shadow_end_color"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="5dp">
 
-    <LinearLayout
-        android:id="@+id/event_card"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:id="@+id/inside_card">
 
-        <TextView
-            android:id="@+id/text_view_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textSize="40dp"
-            android:layout_alignParentStart="true"/>
+            <TextView
+                android:id="@+id/text_view_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-light"
+                android:layout_alignParentStart="true"
+                app:layout_constraintLeft_toLeftOf="@id/inside_card"
+                app:layout_constraintTop_toTopOf="@id/inside_card"
+                android:layout_marginLeft="3dp"/>
 
-        <TextView
-            android:id="@+id/text_view_start_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:textSize="20dp"
-            android:layout_toEndOf="@id/text_view_description"/>
+            <TextView
+                android:id="@+id/text_view_start_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start"
+                android:textSize="15sp"
+                android:layout_toEndOf="@id/text_view_description"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_description"
+                app:layout_constraintLeft_toLeftOf="@id/inside_card"
+                android:layout_marginLeft="3dp"/>
 
-        <TextView
-            android:id="@+id/text_view_finish_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="End"
-            android:textSize="20dp"
-            android:layout_toEndOf="@id/text_view_start_time"/>
+            <TextView
+                android:id="@+id/text_view_finish_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="End"
+                android:textSize="15sp"
+                android:layout_toEndOf="@id/text_view_start_time"
+                app:layout_constraintLeft_toRightOf="@id/text_view_start_time"
+                app:layout_constraintTop_toBottomOf="@id/text_view_description"
+                android:layout_marginLeft="10dp"/>
 
-    </LinearLayout>
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="120dp"
+            android:layout_height="30dp"
+            app:layout_constraintTop_toTopOf="@id/inside_card"
+            app:layout_constraintBottom_toBottomOf="@id/inside_card"
+            app:layout_constraintRight_toRightOf="@id/inside_card"
+            android:layout_marginRight="5dp"
+            android:layout_marginVertical="6dp">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/edit_button"
+                app:fabCustomSize="30dp"
+                android:src="@drawable/ic_edit"
+                android:layout_gravity="right"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/update_button"
+                app:fabCustomSize="27dp"
+                android:src="@drawable/ic_note"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center|left"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:id="@+id/delete_button"
+                app:fabCustomSize="27dp"
+                android:src="@drawable/ic_delete"
+                android:layout_gravity="center"/>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
