--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".AddEventActivity">
+    tools:context=".AddUpdateEventActivity">
 
     <EditText
         android:id="@+id/edit_text_description"
