--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,24 +10,30 @@
 
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <eu.marcellofabbri.dailyroadmap.MainHeader
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:background="@color/colorAccent"
         app:layout_constraintHeight_percent=".15"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/header_date"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/colorAccent"
-            android:text="TODAY'S DATE"
-            android:textAlignment="center"
+            android:layout_gravity="top|start"
+            android:text="TO/DA/YY"
             android:textSize="60sp" />
 
-    </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/calendar_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_calendar_large" />
+
+    </eu.marcellofabbri.dailyroadmap.MainHeader>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
