--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,12 +63,28 @@
         app:layout_constraintTop_toBottomOf="@+id/header"
         tools:listitem="@layout/event_item" />
 
-    <eu.marcellofabbri.dailyroadmap.MyVisualizer
-        android:id="@+id/myVisualizer"
+<!--    <eu.marcellofabbri.dailyroadmap.MyVisualizer-->
+<!--    android:id="@+id/myVisualizer"-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="0dp"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintHeight_percent=".85"-->
+<!--    app:layout_constraintLeft_toLeftOf="parent" />-->
+
+    <RelativeLayout
+        android:id="@+id/BlueprintPainterContainer"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent=".85"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <RelativeLayout
+        android:id="@+id/eventPainterContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent=".84"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -76,8 +92,8 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="23dp"
-        android:layout_marginBottom="23dp"
+        android:layout_marginRight="123dp"
+        android:layout_marginBottom="2dp"
         android:backgroundTint="@color/colorAddButton"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
