--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -14,7 +14,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inside_card">
+        android:id="@+id/inside_card"
+        android:outlineAmbientShadowColor="@android:color/black">
 
             <TextView
                 android:id="@+id/text_view_description"
