--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,26 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorAddButton">#000000</color>
-    <color name="daytimeBackground">#59B7FD</color>
+    <color name="daytimeBackground">#5E8CA8</color>
     <color name="calendarButton">#673AB7</color>
     <color name="todayButton">#673AB7</color>
     <color name="deleteAllButton">#3A9EB7</color>
     <color name="addButton">#3A9EB7</color>
+    <color name="trackDefaultColor">#C6D6EF</color>
+
+    <color name="black">#000000</color>
+    <color name="orange">#FF6600</color>
+    <color name="blue">#2E42B5</color>
+    <color name="red">#DD1515</color>
+    <color name="green">#128E1D</color>
+    <color name="amber">#FFD128</color>
+
+    <color name="blackSemi">#A8000000</color>
+    <color name="orangeSemi">#B1FF6600</color>
+    <color name="blueSemi">#A82E42B5</color>
+    <color name="redSemi">#A8DD1515</color>
+    <color name="greenSemi">#A8128E1D</color>
+    <color name="amberSemi">#A8FFD128</color>
 
 
 </resources>
